tests/snapshots/snapshots__help_overlay_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
     ┌ tuxedo · help ─────────────────────────────────────────────────────────────────────────┐     
 PROJ│  NAVIGATION                                  VIEW                                      │     
   +w│    j / k  (↓ / ↑)    next / previous task      /                 fuzzy search          │     
   +h│    gg / G            first / last task         fp / fc           filter project/context│     
   +f│    Ctrl-d / Ctrl-u   page down / up            ff / fs           saved filter pick/save│     
   +h│                                                S                 cycle sort            │     
   +l│  EDITING                                       v                 visual / multi-select │     
   +p│    n                 new task                  l                 list view             │     
   +t│    e / i             edit (normal / insert)    a                 archive view          │     
     │    r                 reschedule task           A                 archive completed     │rd   
 CONT│    x                 toggle complete           H                 show done in list     │     
   @e│    dd                delete task               F                 show future in list   │     
   @h│    p                 cycle priority A→B→C→·    B                 show blocked in list  │     
   @l│    J / K             move task down / up       [ / ]             toggle filter / detail│     
   @p│    c                 add/remove context        T                 theme picker          │     
     │    +                 add project               D                 cycle density         │     
     │    yy / yb           copy line / body          L                 toggle line numbers   │     
     │    u                 undo                                                              │     
     │                                              SYSTEM                                    │     
     │  RECURRENCE (rec:)                             : / Ctrl-P        command palette       │     
     │    j / k / Tab       next / prev field         s                 share capture QR      │     
     │    h / l / + / -     change value              ? / ,             help / settings       │     
     │    Enter / Esc       save / cancel             q / Ctrl-c        quit                  │     
     │────────────────────────────────────────────────────────────────────────────────────────│     
     │  FORMAT                                                                                │     
     │    (A)               priority A-Z              due:YYYY-MM-DD    due date (+1w = range)│     
     │    YYYY-MM-DD        creation / done date      rec:Nu            recur (u in d/w/m/y/b)│     
     │    +project          project tag(s)            rec:+Nu           strict: anchor on due:│     
     └────────────────────────────────────────────────────────────────────────────────────────┘     
                                                                                                    
 HELP   ? close help                                         15 open · 2026-05-06 · tuxedo 2026.8.1
